--- a/src/styles/Canvas/Canvas.scss
+++ b/src/styles/Canvas/Canvas.scss
@@ -36,8 +36,9 @@
       border-radius: 50%;
     }
     .icon:hover {
+      transition: 0.4s;
       cursor: pointer;
-      background-color: #ffadad;
+      background-color: #e63946;
       color: #ffffff;
     }
   }
