[Fixed] zIndex issue

--- a/src/styles/Canvas/Canvas.scss
+++ b/src/styles/Canvas/Canvas.scss
@@ -29,6 +29,10 @@
   }
 
   .shape-items {
+    div[role='presentation'] {
+      display: flex;
+      flex-direction: column-reverse;
+    }
     .icon {
       margin: 8px;
       padding: 3px;
